clusters/oracle-cluster/core/longhorn-system/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: longhorn-ingress
    namespace: longhorn-system
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:9Avc+/6fCvurAwSDTylMAPO+xNe6QQOshktxNw==,iv:AR/fauIVVK7W97k4HHcPgfJI6+kl/PpUdj/GQH9eMxk=,tag:AEvXNZCIWCr4uhsfpQie3w==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:G/hwfWdPIaUT60G1JNDcZjK0Bnre+Nr8gWX4ig==,iv:D4scK/Niu6E037mFfkW2msX7km81RgLLYruZDJtNJp0=,tag:RFjBszcjsGDvHLg5bSIzcQ==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: longhorn-frontend
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1guzav4sek0x4l3sqx498d34w3z7yy8jact0yav53uza3zrmyf43qcvyza6
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3UVVmc2FRbzFja2RYMFp2
[...]
            RKG+xvcKrBldc5mzGGokJwI1n4AiwE5g54TthzdiT9Q6VPC8tOw+jA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-05-15T15:53:46Z"
    mac: ENC[AES256_GCM,data:s/ymJAEeW9p51sxJlrEZrZQiQDKp2cwHAWVzJ7BLlGY9ulUN5L/Q4HZokzuJwIllr39o2SuIRRlRHM8wdD9KpW734MoaCp1HN1Ojclg4nflnwc5bd0HIwd8x2KgtPO33EIvQjEqR3rQnjJCI+xxgJUsO3mnLlwsSyI+aI5p8ubs=,iv:myXR3LX+r+hypuNQq7StrImcyo+h5lSuMFiyV85Lbtc=,tag:BET9hbExy8Ohx/MiCPMRJQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalIPs)$
    version: 3.7.3
